<resources>
    <string name="app_name">GalleryMe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="author_name">Author: %s</string>
    <string name="image">Image</string>
    <string name="empty_data">No Images Found.</string>
    <string name="retry">Retry</string>
    <string name="authors">Authors</string>
    <string name="action_filter">Filter</string>
    <string name="showing_images_for">Showing images for: %s</string>
    <string name="all_authors">All Authors</string>
    <string name="filters">Filter</string>
    <string name="select_author_label">Select Author</string>
</resources>