<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/list_item_spacing">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/filterListTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filters"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/filterListDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/filterListTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/authorSpinnerTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/authors"
        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
        app:layout_constraintEnd_toStartOf="@+id/authorSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/authorSpinner"
        app:layout_constraintTop_toTopOf="@+id/authorSpinner" />

    <Spinner
        android:id="@+id/authorSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:prompt="@string/select_author_label"
        android:layout_marginTop="@dimen/list_item_spacing_half"
        app:layout_constraintEnd_toStartOf="@+id/clearAuthorFilterButton"
        app:layout_constraintStart_toEndOf="@+id/authorSpinnerTitle"
        app:layout_constraintTop_toBottomOf="@+id/filterListDivider"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clearAuthorFilterButton"
        style="?attr/materialIconButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/baseline_clear_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/authorSpinner"
        app:layout_constraintBottom_toBottomOf="@id/authorSpinner"/>

</androidx.constraintlayout.widget.ConstraintLayout>